# Ai-Credit-Scoring

./: .env  .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  Requirements.txt  audit_parser.py  compare_advisor_approaches.py  debug_index.py  debug_rag.py  pyproject.toml  report.csv  report.txt  requirements.txt  setup.sh  test_cimb_loans.py  test_ollama.py  test_thai_query.py  verify_shap.py
.claude/: settings.json  settings.local.json
ai_credit_scoring.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: settings.py
data/: clean_corpus.py  cleaning_report.json  manifest_cleaned.json
eval/: analyze_results.py  build_test_set.py  generate_ablation.py  run_eval.py  status.py
examples/: advanced_query.py  basic_query.py  chat_engine.py  rag_synthesis_comparison.py  test_query_collection.py
results/: compare_20260320_042934.json  compare_20260320_164805.json  eval_gemini.json  eval_gemini_formal.json  eval_ollama.json  eval_run_log.txt  eval_run_log3.txt  ingest_log2.txt  ingest_log3.txt
scripts/: compare_providers.py  compare_rag.py  doctor_ollama.py  evaluate_planning.py  evaluate_rag.py  run_rag_tests.ps1  test_gemini.py  test_issup_plan.py  test_planning.py
src/: __init__.py  data_loader.py  document_parser.py  indexer.py  ingest.py  query.py  query_engine.py  schema.py  settings.py  utils.py
tests/: test_bug_condition_exploration.py  test_document_parser_cleaning.py  test_document_parser_metadata.py  test_document_parser_quarantine.py  test_indexer_chroma_reset.py  test_metadata_formatting.py  test_planner_quality.py  test_query.py  (+6 more)
(+85 files in other folders)
