[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-credit-scoring"
version = "0.1.0"
description = "AI credit scoring and document query utilities"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["src*", "config*"]
